fix line-spacing, color links

--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,7 @@ i {
     height: 60%;
     top: 60%;
     left: 0;
-    background-color: #F7F7F7;
+    background-color: #e4f8fe;
     z-index: -1;
 }
 
@@ -80,7 +80,7 @@ i {
     height: 30%;
     top: 50%;
     width: 70%;
-    background-color: #f7f7f7;
+    background-color: #d4ffe2;
 }
 
 .link-underline:hover:before,
@@ -508,7 +508,7 @@ header {
     float: left;
     max-width: 640px;
     margin: 50px auto 50px auto;
-    line-height: 40px;
+    line-height: 30px;
     padding: 80px 30px 0 30px;
     display: block;
     width: 100%;
@@ -525,6 +525,7 @@ footer .tldr {
         font-size: 16px;
         text-align: left;
         margin: 80px auto 80px auto;
+        line-height: 38px;
     }
 }
 
